# hackattic-rust

./: .gitignore  Cargo.toml  cert.der
extra/visual_basic_math/: gen_training_text.js  generate_datas.sh  train_v4.ps1
hackattic_common/: Cargo.toml
hackattic_common/src/: hex_slice.rs  lib.rs  serde_utils.rs
hosting_git/: Cargo.toml
hosting_git/src/: main.rs
jotting_jwts/: Cargo.toml
jotting_jwts/src/: main.rs
src/: lib.rs  serde_utils.rs
src/face_detect/: detection.rs  mod.rs
src/visual_basic_math/: mod.rs  ocr.rs
