[package]
name = "hackattic"
version = "0.1.0"
authors = ["NMDanny <nmdanny@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ring = "0.12.1"
reqwest = "0.8.1"
base64 = "0.8.0"
hex = "0.3.1"
base64-serde = "0.2.0"
failure = "0.1.1"
rdb = "0.2.1"

[dependencies.openssl]
version = "0.9.23"
features = ["v110"]