[package]
name = "hackattic"
version = "0.1.0"
authors = ["NMDanny <nmdanny@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1.17"
ring = "0.12.1"
reqwest = "0.8.1"
base64 = "0.8.0"
hex = "0.3.1"
base64-serde = "0.2.0"
failure = "0.1.1"
rdb = "0.2.1"
tempfile = "2.2.0"
redis = "0.8.0"
trust-dns-server = "0.13.0"
trust-dns-proto = "0.2.0"
rdb-parser = { git = "https://github.com/nmdanny/rdb-parser.git"}

[dependencies.openssl]
version = "0.9.23"
features = ["v110"]