[package]
name = "jotting_jwts"
version = "0.1.0"
authors = ["NMDanny <nmdanny@gmail.com>"]

[dependencies]
hackattic_common = { path = "../hackattic_common" }
failure = "^0.1.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
reqwest = "^0.8.1"
log = "^0.4"
env_logger = "^0.5.0-rc.2"
pretty_env_logger = "^0.2.0-rc.2"
ansi_term = "^0.10.2"
hyper = "^0.11"
futures = "0.1.17"
tokio-core = "^0.1.11"
jsonwebtoken = "^4.0.1"